production-infrastructure/traefik/traefik-oidc-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-oidc-auth
  namespace: traefik
spec:
  plugin:
    traefik-oidc-auth:
      Secret: urn:k8s:secret:traefik-authentik-oidc:session-secret
      Provider:
        Url: https://authentik.mbtux.com/application/o/authorize/
        ClientId: urn:k8s:secret:traefik-authentik-oidc:client-id
        ClientSecret: urn:k8s:secret:traefik-authentik-oidc:client-secret
      Scopes:
        - openid
        - profile
        - email
