production-infrastructure/traefik/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik-mgmt.mbtux.com
      secretName: tls-traefik-dashboard
  rules:
    - host: traefik-mgmt.mbtux.com
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: traefik
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: traefik
